app/styles/slide.scss
@import 'variables';
@import 'streetview';

.slide {
  position: relative;
  height: 100%;
  min-height:100%;
  width: 100%;
  text-align: center;
  z-index: 1;
}

.slide-inner {
  left: 0px;
  top: 0px;
  height: 100%;
  width: 100%;
  position: fixed;
  overflow: hidden;
}

.slide-center {
  position: absolute;
  top: 45%;
  left:50%;
  width:40%;
  transform: translate(-50%, -50%);
  
  h3 {font-size:1.8em;}
}

.slide-text {
  font-size: 24px;
  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.4) 25%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.4) 75%, transparent);
}
.slide-text-container {
  margin-left: 25%;
  width: 50%;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.slide-text-container a {
  color: white;
  font-family: $base-font-medium;
}

.slide-outer-column {
	height:auto;
	position:relative;
	margin-bottom:450px;
	
	.column-nav-bg {
		position: fixed;
		width: 100%;
		height: 60px;
		background:#e3e4e5;
		top: 0;
		opacity:0;
	}
}
.slide-column {
	background:#e3e4e5;
	color:#000;
	font-size:20px;
	height:auto;
	position:relative;
	text-align:left;
	
	p {
		color:#222020;
		img {padding:15px 0;}
	}
	
	figure {
		margin:0 auto;
		padding:30px 0;
		font-family:'Arial',sans-serif;
		font-size:16px;
	}
}
.slide-column-container {
	width:50%;
	margin-left:25%;
	padding:100px 0;
	position:relative;
}
.slide-column.slide-footnotes .slide-column-container {
	column-count:2;
	
	& > * {
		-webkit-column-break-inside: avoid;
	    column-break-inside: avoid;	
    }
    p:first-child {margin-top:0;}
}

.slide-video-content {
  height: 100%;
  width: 100%;

  iframe {
    height: 100%;
    width: 100%;
  }
}

.slide-outer-video {
  height: 200%;
  z-index: 2;
}
.slide-video .meta-text {
  right: initial;
  width: 500px;
  bottom: 50px;
  text-align:left;
}

.slide-photo {
  height: 100%;
  width: 100%;
  
  .meta-text {
	  background:#e3e4e5;
	  
	  .meta-caption {
		  width:50%;
		  margin:0 auto;
		  text-align:left;
		  color:#222020;
	  }
  }
}

.slide-photo .fit-to-window-directive {
  background: #e3e4e5;
}

.meta-text {
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: rgba(0, 0, 0, 0.6);
  color: white;

  .meta-caption {
	font-family:'Arial', sans-serif;
    padding: 15px 30px;
  }
}

.footnote {
	vertical-align:top;
	text-decoration:none;
}


.slide-outer-photo {
  height: 225%;
}

.slide-author {
  z-index: 2;
  img {
    max-width: 50%;
    max-height: 40%;
    margin-top: 200px;
  }

  &.pin img {
    top: 20px + $nav-height;
    left: 50px;
    transform: scale(0.2) translate(0, 0);
  }

  &.show {
    display: block;
  }
}

.slide-outer-author {
  height: 200%;
}

.slide-outer-outro {
  height: 200%;
  .slide-center {width:90%;}
}

.slide-outro-actions {
  padding-top: 84px;
}

.slide-outro-action {
  display: inline-block;
  height: 56px;
  width: 296px;
  margin:0 20px;
  line-height: 56px;
  font-size: 20px;
  text-transform: uppercase;
  text-decoration: none;
  border: 2px solid white;
  border-radius: 2px;
  cursor: pointer;
  color: white;

  &:hover {
    background: rgba(255, 255, 255, 0.2);
  }
}

.fixed-bg {
	opacity:0;
	background-color:#e3e4e5;
	display:block;
	width:100%;
	height:100%;
	position:fixed;
	top:0;
	z-index:-1;
}

.slide-scroll-indicator {
  background-image: url(../images/Prev_Shot.svg);
  height: 29px;
  width: 80px;
  background-size: 80px;
  background-position-x: 0px;
  position: absolute;
  opacity: 0;
  bottom: 40px;
  left: 50%;
  margin-left: -40px;
  transition: opacity 0.5s;
  transform: rotate(180deg);
  animation: 2s bounce 1s infinite;

  &:after {
    background-image: url(../images/Prev_Shot.svg);
    height: 29px;
    width: 80px;
    background-size: 80px;
    background-position-x: 0px;
    position: absolute;
    bottom: 11px;
    left: 50%;
    margin-left: -40px;
    content: ' ';
  }
}

.bounce {
  animation-name: bounce;
}

@-webkit-keyframes bounce {
  0%, 10%, 25%, 40%, 100% {-webkit-transform: translateY(0) rotate(180deg);}
  20% {-webkit-transform: translateY(-10px) rotate(180deg);}
  30% {-webkit-transform: translateY(-5px) rotate(180deg);}
}
@-moz-keyframes bounce {
  0%, 10%, 25%, 40%, 100% {-moz-transform: translateY(0) rotate(180deg);}
  20% {-moz-transform: translateY(-10px) rotate(180deg);}
  30% {-moz-transform: translateY(-5px) rotate(180deg);}
}
@keyframes bounce {
  0%, 10%, 25%, 40%, 100% {transform: translateY(0) rotate(180deg);}
  20% {transform: translateY(-10px) rotate(180deg);}
  30% {transform: translateY(-5px) rotate(180deg);}
}

.shot-ready .slide-scroll-indicator {
  opacity: 1;
}

.cinema .slide-scroll-indicator {
  opacity: 0;
}

.home .slide-scroll-indicator {
  opacity: 1;
}

.slide-intro, .slide-outro {
  font-size: 30px;
  font-family: $base-font-medium;
  
  .intro-splash, .intro-title {
	  position:absolute;
	  top:0;
	  left:0;
	  right:0;
	  -webkit-transform:translateY(-50%);
	  transform:translateY(-50%);
	  -webkit-transition:opacity 1s;
	  transition:opacity 1s;
	  
	  h3 {margin-top:0;}
	  &.intro-splash h4 {margin:10px 0; font-weight:normal;}
	  
	  &.intro-title { opacity:0; }
  }
}

.slide-background {
  width: 100%;
}

.slide-shot-number {
  padding: 40px 0px 0px 0px;
  height: 78px;
  width: 140px;
  background-image: url(../images/Shot_by_Shot_Icon.svg);
  text-align: center;
  display: inline-block;
  font-size: 40px;
}

.slide-inner.slide-highlight {
  overflow: visible;

  .meta-text {
    left: 140px;
    top: -80px;
    bottom: auto;
    right: auto;
    height: 200px;
    width: 200px;
    background: transparent;
    text-align: left;
  }
}
.slide-highlight-spotlight {
  border: 3px solid white;
  height: 250px;
  width: 250px;
  border-radius: 250px;
  margin-left: -125px;
  margin-top: -125px;
}
@media (max-height: 615px) {
  .slide-highlight-spotlight {
    height: 130px;
    width: 130px;
    border-radius: 130px;
    margin-left: -65px;
    margin-top: -65px;
  }
}

.slide-streetview {
  border-top: 2px solid white;
  border-bottom: 2px solid white;
}
.slide-outer-streetview {
  height: 200%;
}

.slide-outer-bg-video {
  height: 100%;
}

.slide-outer-main-title {
  height: 200%;
}
.slide-main-title {
  font-size: 28px;
  line-height: 1.5;
}
  .slide-main-title-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -100px);
    transition: opacity 0.3s;
  }
    .slide-main-title-title {
      font-family: $base-font-medium;
    }
    .slide-main-title-play {
      height: 80px;
      width: 80px;
      margin: 20px auto 0;
      background: url(../images/play-button.svg) no-repeat;
      background-size: 100%;
      opacity: 0.8;
      transition: opacity 0.2s;
      cursor: pointer;

      &:hover {
        opacity: 1;
      }
    }
    
    
@media only screen and (max-device-width: 736px)  { 
	[class*='-container'] {
		width:90%;
		margin-left:5%;
	}
	.slide-center {
		width:85%;
	}
	.slide-intro {
		font-size:1.2em;
	}
	.slide-text, .slide-column {
		font-size:16px;
	}
}

